03_api_docker/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cu-ingress
  labels:
    name: cu-ingress
spec: 
  rules:
  - host: cu.local
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: cu-svc
            port: 
              number: 80
